Closed Bug 168496 Opened 22 years ago Closed 21 years ago

Go | Mail Start Page doesn't work in the stand alone message window

Categories

(SeaMonkey :: MailNews: Message Display, defect)

x86
Windows 95
defect
Not set
minor

Tracking

(Not tracked)

VERIFIED FIXED
mozilla1.4alpha

People

(Reporter: neil, Assigned: neil)

References

Details

(Keywords: polish)

Attachments

(2 files)

Attached patch Proposed patchSplinter Review
Keywords: patch, polish, review, ui
we should be removing the menu item instead.
going to land this (or something very close), so reassigning to neil for credit.
Assignee: sspitzer → neil
Target Milestone: --- → mozilla1.4alpha
fixed, along with bug #195238
Status: NEW → RESOLVED
Closed: 21 years ago
Depends on: 195238
Resolution: --- → FIXED
Using trunk build 20030325 on winxp, macosx and linux this is fixed. Verified
Status: RESOLVED → VERIFIED
QA Contact: olgam → esther
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: