fix for bug #168496 [Go | Mail Start Page doesn't work in the stand alone message window, should be hidden] thanks to neil for the fix, r/sr=sspitzer

fix for bug #195238 [Junk toolbar button text should say "Not Junk" if junk messages are selected]

fix for bug #198877 [removed extra menu seperator in view menu, for stand alone msg window]

also, disable junk UI for news messages, since the junk feature doesn't work for news yet.

r/sr=bienvenu.